<resources>
    <string name="app_name">Marketplace</string>
    <string name="text_view_titulo_text">Título</string>
    <string name="edit_text_titulo_hint">Título...</string>
    <string name="text_view_descripcion_text">Descripción</string>
    <string name="edit_text_descripion_hint">Descripción...</string>
    <string name="text_view_email_text">Correo electrónico</string>
    <string name="edit_text_email_hint">Correo electrónico...</string>
    <string name="text_view_importe_text">Importe</string>
    <string name="edit_text_importe_hint">Importe...</string>
    <string name="text_view_categoria_text">Categoría</string>
    <string name="switch_descuento_text">Ofrecer descuento de envío</string>
    <string name="checkbox_retiro_text">Retiro en persona</string>
    <string name="edit_text_retiro_hint">Dirección de retiro...</string>
    <string name="checkbox_terminos_text">Aceptar los términos y condiciones</string>
    <string name="button_publicar_text">Publicar</string>
    <string name="text_view_min_text">0%</string>
    <string name="text_view_max_text">100%</string>
    <string name="validacion_titulo_requerido">El título es requerido</string>
    <string name="validacion_email_invalido">El correo electrónico ingresado no es válido</string>
    <string name="validacion_importe_requerido">El importe es requerido</string>
    <string name="validacion_importe_invalido">El importe ingresado no es válido</string>
    <string name="validacion_importe_mayor_a_cero">El importe debe ser mayor a 0</string>
    <string name="validacion_categoria_requerido">La categoría es requerida</string>
    <string name="validacion_descuento_mayor_a_cero">Por favor seleccione un porcentaje de descuento mayor a 0 o quite la opcion de ofrecer descuento de envío</string>
    <string name="validacion_retiro_requerido">Por favor ingrese la dirección de retiro o quite la opcion de retiro en persona</string>
    <string name="validacion_terminos_requerido">Debe aceptar los términos y condiciones</string>
    <string name="validacion_articulo_mensaje_1">Artículo publicado</string>
    <string name="categoria_vacio_nombre"></string>
    <string name="categoria_indumentaria_nombre">Indumentaria</string>
    <string name="categoria_electronica_nombre">Electrónica</string>
    <string name="categoria_entretenimiento_nombre">Entretenimiento</string>
    <string name="categoria_jardin_nombre">Jardin</string>
    <string name="categoria_vehiculos_nombre">Vehículos</string>
    <string name="categoria_juguetes_nombre">Juguetes</string>
    <string name="switch_descuento_substring_1_text">&#160;de&#160;</string>
    <string name="switch_descuento_substring_2_text">%</string>
    <string name="categoria_00_id"></string>
    <string name="categoria_00_nombre"></string>
    <string name="categoria_01_id">MLA5725</string>
    <string name="categoria_01_nombre">Accesorios para Vehículos</string>
    <string name="categoria_02_id">MLA1512</string>
    <string name="categoria_02_nombre">Agro</string>
    <string name="categoria_03_id">MLA1403</string>
    <string name="categoria_03_nombre">Alimentos y Bebidas</string>
    <string name="categoria_04_id">MLA1071</string>
    <string name="categoria_04_nombre">Animales y Mascotas</string>
    <string name="categoria_05_id">MLA1367</string>
    <string name="categoria_05_nombre">Antigüedades y Colecciones</string>
    <string name="categoria_06_id">MLA1368</string>
    <string name="categoria_06_nombre">Arte, Librería y Mercería</string>
    <string name="categoria_07_id">MLA1743</string>
    <string name="categoria_07_nombre">Autos, Motos y Otros</string>
    <string name="categoria_08_id">MLA1384</string>
    <string name="categoria_08_nombre">Bebés</string>
    <string name="categoria_09_id">MLA1246</string>
    <string name="categoria_09_nombre">Belleza y Cuidado Personal</string>
    <string name="categoria_10_id">MLA1039</string>
    <string name="categoria_10_nombre">Cámaras y Accesorios</string>
    <string name="categoria_11_id">MLA1051</string>
    <string name="categoria_11_nombre">Celulares y Teléfonos</string>
    <string name="categoria_12_id">MLA1648</string>
    <string name="categoria_12_nombre">Computación</string>
    <string name="categoria_13_id">MLA1144</string>
    <string name="categoria_13_nombre">Consolas y Videojuegos</string>
    <string name="categoria_14_id">MLA1500</string>
    <string name="categoria_14_nombre">Construcción</string>
    <string name="categoria_15_id">MLA1276</string>
    <string name="categoria_15_nombre">Deportes y Fitness</string>
    <string name="categoria_16_id">MLA5726</string>
    <string name="categoria_16_nombre">Electrodomésticos y Aires Ac.</string>
    <string name="categoria_17_id">MLA1000</string>
    <string name="categoria_17_nombre">Electrónica, Audio y Video</string>
    <string name="categoria_18_id">MLA2547</string>
    <string name="categoria_18_nombre">Entradas para Eventos</string>
    <string name="categoria_19_id">MLA407134</string>
    <string name="categoria_19_nombre">Herramientas</string>
    <string name="categoria_20_id">MLA1574</string>
    <string name="categoria_20_nombre">Hogar, Muebles y Jardín</string>
    <string name="categoria_21_id">MLA1499</string>
    <string name="categoria_21_nombre">Industrias y Oficinas</string>
    <string name="categoria_22_id">MLA1459</string>
    <string name="categoria_22_nombre">Inmuebles</string>
    <string name="categoria_23_id">MLA1182</string>
    <string name="categoria_23_nombre">Instrumentos Musicales</string>
    <string name="categoria_24_id">MLA3937</string>
    <string name="categoria_24_nombre">Joyas y Relojes</string>
    <string name="categoria_25_id">MLA1132</string>
    <string name="categoria_25_nombre">Juegos y Juguetes</string>
    <string name="categoria_26_id">MLA3025</string>
    <string name="categoria_26_nombre">Libros, Revistas y Comics</string>
    <string name="categoria_27_id">MLA1168</string>
    <string name="categoria_27_nombre">Música, Películas y Series</string>
    <string name="categoria_28_id">MLA1430</string>
    <string name="categoria_28_nombre">Ropa y Accesorios</string>
    <string name="categoria_29_id">MLA409431</string>
    <string name="categoria_29_nombre">Salud y Equipamiento Médico</string>
    <string name="categoria_30_id">MLA1540</string>
    <string name="categoria_30_nombre">Servicios</string>
    <string name="categoria_31_id">MLA9304</string>
    <string name="categoria_31_nombre">Souvenirs, Cotillón y Fiestas</string>
    <string name="categoria_32_id">MLA1953</string>
    <string name="categoria_32_nombre">Otras categorías</string>
</resources>